# ros2_jtop

./: README.md
jtop_orinnx_msgs/: CMakeLists.txt  package.xml
jtop_orinnx_msgs/msg/: Jtop.msg
jtop_orinnx_msgs/msg/Cpu/: Cpu.msg  CpuFrequency.msg  IdleState.msg
jtop_orinnx_msgs/msg/Gpu/: Gpu.msg  GpuFrequency.msg  GpuStatus.msg
jtop_orinnx_msgs/msg/Mem/: Emc.msg  Mem.msg  Ram.msg  Swap.msg  Zram.msg
jtop_orinnx_msgs/msg/Temp/: Temp.msg  TempList.msg
ros2_jtop/: package.xml  setup.cfg  setup.py
ros2_jtop/launch/: jtop.launch.py
ros2_jtop/ros2_jtop/: jtop.py
ros2_jtop/rqt_gui_setting/: jtop.perspective
